2001-07-19 Andras Varga

        * added index.h which defines groups for the documentation; updated
        a lot of classes with @ingroup directives.

       	* cdensity.h chist.h cksplit.h cpsquare.h cqueue.h cstat.h ctopo.h
        cvarhist.h chead.h ctypes.h cwatch.h: added/cleaned up DOC++ comments 

2001-07-15 Andras Varga

	* added documentation for redefined cObject methods. Affects nearly all
        headers.

2001-07-13 Andras Varga

	* switched to DoxyGen for generating documentation: doxy.cfg added

       	* cmsgheap.h coutvect.h cpacket.h ctopo.h: added/cleaned up DOC++
        comments 

2001-07-11 Andras Varga

	* carray.h cgate.h cllist.h cpar.h cqueue.h csimul.h: added/cleaned up
        DOC++ comments 

2001-07-07 Andras Varga

        * cmessage.h,cmodule.h,util.h: added/cleaned up DOC++ comments 

2001-07-02 Andras Varga

        * cenum.h,cstruct.h: DOC++ comments added (not yet complete)

2001-06-28  Andras Varga
        
	* utils.h: added DOC++ comments (not yet complete!).

	* cstruct.h added: classes to support self-describing data structures,
        to be used for implementing message subclassing. UNTESTED. To be added
        to the makefile.

        * cenum.h added: classes to support string mapping of enums. UNTESTED.
        To be added to the makefile.

2001-06-23  Andras Varga

       	* cobject.h: cleaned up DOC++ comments

        * Class comments fixed in all files. Comments for methods, functions,
        and macros yet to be done.

2001-06-22  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Some fixes to errors produced by opp_docify.pl: missing #endif at
        bottom of file added, replaced /* */ statements inside comments
        with // //.

	* Merged in documentation from refman.html into header files using
	Andras' helper script opp_docify.pl (affects all files).  unused.txt
        contains doc entries extracted from opp_docify that did not fit into
        the header files.

